# Sentimizer

./: .gitignore  README.md  pyproject.toml
backend_api/: manage.py
backend_api/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend_api/api/migrations/: 0001_initial.py  0002_diaryentry_title.py
backend_api/main_application/: asgi.py  settings.py  urls.py  wsgi.py
