[tool.poetry]
name = "sentimizer_backend"
version = "0.1.0"
description = ""
authors = ["Henry <henry.phz@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
"backports.weakref" = "^1.0.post1"
"backports.zoneinfo" = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
