[tool.poetry]
name = "sentimizer_backend"
version = "0.1.0"
description = ""
authors = ["Henry <henry.phz@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
